<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProdutoCadastroActivity">

    <include layout="@layout/toolbar" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="236dp"
        android:layout_height="108dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101"
        app:srcCompat="@drawable/lunne_logo"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/nomeProduto"
        android:layout_width="360dp"
        android:layout_height="42dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_form_field_top"
        android:ems="10"
        android:hint="@string/produto"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/fotoProduto"
        android:layout_width="360dp"
        android:layout_height="42dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_form_field_sqr"
        android:bottomLeftRadius="5dp"
        android:ems="10"
        android:hint="@string/foto"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nomeProduto"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/qtdProduto"
        android:layout_width="360dp"
        android:layout_height="42dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/bg_form_field_bottom"
        android:ems="10"
        android:hint="@string/qtd"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/salvarProduto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fotoProduto"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/salvarProduto"
        android:layout_width="368dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#000000"
        android:text="@string/salvar"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoProduto"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>